<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="disableAnimation"
            app:title="@string/disable_animation"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/photo">

        <SwitchPreferenceCompat
            app:key="photoQuality"
            app:title="@string/photo_quality"
            app:summary="@string/photo_quality_summary"/>

    </PreferenceCategory>

</PreferenceScreen>